infrastructure/argocd/github-webhook-ipallow-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: github-webhook-ipallow
spec:
  ipAllowList:
    # curl -s https://api.github.com/meta | yq --yaml-output '.hooks'
    sourceRange:
      - 192.30.252.0/22
      - 185.199.108.0/22
      - 140.82.112.0/20
      - 143.55.64.0/20
      - 2a0a:a440::/29
      - 2606:50c0::/32
