infrastructure/argocd/github-webhook-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: github-webhook
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: traefik
      name: traefik-external
  hostnames:
    - github-webhook.argocd.wildfreddy.fivebytestudios.com
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: argocd-server
          port: 80
          weight: 1
      matches:
        - path:
            type: Exact
            value: /api/webhook
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: github-webhook-ipallow
