infrastructure/argocd/gitlab-webhook-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitlab-webhook
spec:
  parentRefs:
    - name: traefik-external
      namespace: traefik
  hostnames:
    - gitlab-webhook.argocd.wildfreddy.fivebytestudios.com
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
      matches:
        - path:
            type: Exact
            value: /api/webhook
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: gitlab-webhook-ipallow
