infrastructure/argocd/gitlab-webhook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-webhook
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # Only allow requests from GitLab's IP ranges
    # https://docs.gitlab.com/user/gitlab_com/#ip-range
    nginx.ingress.kubernetes.io/whitelist-source-range: "34.74.90.64/28,34.74.226.0/24"
spec:
  ingressClassName: public
  rules:
    - host: gitlab-webhook.argocd.wildfreddy.fivebytestudios.com
      http:
        paths:
          - path: /api/webhook
            pathType: Exact
            backend:
              service:
                name: argocd-server
                port:
                  name: http
  tls:
    - hosts:
        - gitlab-webhook.argocd.wildfreddy.fivebytestudios.com
      secretName: gitlab-webhook-tls
