infrastructure/argocd/grpcroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-intranet
      namespace: traefik
  hostnames:
    - grpc.argocd.int.fivebytestudios.com
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: argocd-server
          port: 443
          weight: 1
